GUI: Fix covered leader cards not showing

--- a/src/main/resources/assets/gui/index.css
+++ b/src/main/resources/assets/gui/index.css
@@ -164,3 +164,7 @@ Production:selected > VBox {
 .discountleader {
     -fx-background-image: url('leadertemplates/discountleader.png');
 }
+
+.backleader {
+    -fx-background-image: url('leadertemplates/backleader.png');
+}
